apps/jellyfin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: jellyfin/jellyfin
        name: jellyfin
        volumeMounts:
            - name: jellyfin-pv
              mountPath: /config
      volumes:
        - name: jellyfin-pv
          persistentVolumeClaim:
            claimName: jellyfin-pvc
